--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -1,3 +1,57 @@
 .Home {
-    
+    &-title {
+        font-size: 48px;
+        line-height: 66px;
+        color: $gray-4;
+        font-weight: 400;
+
+        .bold {
+            font-weight: bold;
+        }
+    }
+
+    &-subtitle {
+        font-weight: 700;
+        font-size: 32px;
+        line-height: 44px;
+        color: $gray-2;
+    }
+
+    &-options {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        padding: 0px;
+        gap: 32px;
+
+        @include max-md {
+            flex-direction: column;
+        }
+
+        &__card {
+            width: 100%;
+            border-radius: 8px;
+            box-shadow: 0px 4px 28px rgba(171, 171, 171, 0.25);
+            background-color: $white;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            padding: 64px 40px;
+            gap: 8px;
+            font-family: 'Manrope';
+            font-style: normal;
+            font-size: 36px;
+            color: $gray-4;
+
+            .bold {
+                font-weight: 700;
+            }
+
+            &.color {
+                color: $white;
+                background: $primary-color;
+                box-shadow: 0px 4px 28px rgba(171, 171, 171, 0.25);
+            }
+        }
+    }
 }
