Estrutura das telas

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -14,3 +14,7 @@
 @import "../../pages/Login/login.scss"; 
 @import "../../pages/RegisterStudant/register-studant.scss"; 
 @import "../../pages/Home/home.scss"; 
+@import "../../pages/Schedules/schedules.scss"; 
+@import "../../pages/SearchMonitor/search-monitor.scss"; 
+@import "../../pages/Preferences/preferences.scss"; 
+@import "../../pages/Profile/profile.scss";
