--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -4,6 +4,7 @@
         line-height: 66px;
         color: $gray-4;
         font-weight: 400;
+        margin: 0;
 
         .bold {
             font-weight: bold;
