--- a/src/pages/Preferences/preferences.scss
+++ b/src/pages/Preferences/preferences.scss
@@ -4,6 +4,14 @@
         line-height: 66px;
         color: $gray-4;
         font-weight: 700;
+        margin: 0;
+    }
+
+    &-text {
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 27px;
+        color: $gray-4;
     }
 
 }
