Inicio paginas de monitor e meus horarios

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -20,11 +20,14 @@
         .bold {
             font-weight: bold;
         }
+        cursor: pointer;
 
     }
 
     &-img {
         height: 54px;
         width: auto;
+        border-radius: 100%;
+        cursor: pointer;
     }
 }
