--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -43,6 +43,7 @@
             font-style: normal;
             font-size: 36px;
             color: $gray-4;
+            cursor: pointer;
 
             .bold {
                 font-weight: 700;
