--- a/src/pages/Preferences/preferences.scss
+++ b/src/pages/Preferences/preferences.scss
@@ -1,4 +1,14 @@
 .Preferences {
+    gap: 56px;
+    display: flex;
+    flex-direction: column;
+
+    &-header {
+        display: flex;
+        flex-direction: column;
+        gap: 32px;
+    }
+
     &-title {
         font-size: 48px;
         line-height: 66px;
@@ -12,6 +22,41 @@
         font-size: 20px;
         line-height: 27px;
         color: $gray-4;
+        margin: 0;
     }
+
+    
+    &-form {
+        grid-template-columns: auto auto;
+        width: 100%;
+        display: grid;
+        grid-column-gap: 72px;
+        grid-row-gap: 40px;
+        max-width: 840px;
+
+        @include max-lg {
+            grid-template-columns: auto;
+        }
+
+        &__radio {
+            display: flex;
+            gap: 40px;
+        }
+
+        &__item {
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
+        }
+    }
+
+    &-buttons {
+        margin-top: 40px;
+        width: 100%;    
+        display: flex;
+        grid-gap: 64px;
+        width: 384px;
+    }
+
 
 }
