--- a/src/pages/Profile/profile.scss
+++ b/src/pages/Profile/profile.scss
@@ -1,10 +1,70 @@
 .Profile {
+    display: flex;
+    grid: 32px;
+    flex-direction: column;
+    
     &-title {
         font-size: 48px;
         line-height: 66px;
         color: $gray-4;
         font-weight: 700;
         margin: 0;
+    }
+
+    &-main {
+        background: $white;
+        box-shadow: 0px 4px 28px rgba(171, 171, 171, 0.25);
+        padding: 32px;
+        gap: 32px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    &-img {
+        width: 320px;
+    }
+
+    &-info {
+        display: flex;
+        flex-direction: column;
+        grid-gap: 16px;
+
+        &__course {
+            color: $gray-3;
+            font-weight: 700;
+            font-size: 15px;
+            line-height: 20px;
+            display: block;
+        }
+
+        &__name {
+            color: $gray-4;
+            font-weight: 400;
+            font-size: 24px;
+            line-height: 33px;
+            display: block;
+        }
+
+        &__subject {
+            color: $gray-4;
+            font-weight: 600;
+            font-size: 16px;
+            line-height: 22px;
+            display: block;
+
+        }
+
+        &__email {
+            color: $gray-4;
+            font-size: 16px;
+            line-height: 22px;
+            display: block;
+        }
+    }
+
+    &-buttons {
+        display: flex;
+        gap: 24px;
     }
 
 }
