--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -1,11 +1,11 @@
 .Button {
     border-radius: 4px;
     font-weight: 600;
-    font-size: 16px;
+    font-size: 14px;
     text-align: center;
     background-color: $white;
     border: 1px solid $primary-color;
-    height: 48px;
+    height: 40px;
     width: 100%;
     cursor: pointer;
 
@@ -22,6 +22,8 @@
         filter: drop-shadow(0px 0px 4px rgba(10, 129, 113, 0.4));
     }
 
+    &:hover {
 
+    }
 
 }
