--- a/src/components/GridTemplate/grid-template.scss
+++ b/src/components/GridTemplate/grid-template.scss
@@ -4,21 +4,29 @@
       "navbar header"
       "navbar main";
       
-    grid-template-columns: 324px auto;
+    grid-template-columns: 280px auto;
     grid-template-rows: 80px auto;
-    min-height: 100vh;
+    height: 100vh;
 
     &-navbar {
         grid-area: navbar;
+        height: calc(100% - 80px);
+        overflow: auto;
+        position: relative;
+        padding: 40px 0;
+        border-right: 1px solid #E8E8E8;
     }
 
     &-header {
         grid-area: header;
+        border-bottom: 1px solid #E8E8E8;
 
     }
     &-main {
         grid-area: main;
-        margin: 32px 40px;
+        padding: 32px 40px;
+        height: calc(100% - 120px);
+        overflow: auto;
 
     }
 }
