--- a/src/components/Input/input.scss
+++ b/src/components/Input/input.scss
@@ -6,15 +6,16 @@
     &-label {
         font-weight: bold;
         color: $gray-4;
+        font-size: 14px;
     }
 
     input,
     input[type="date"] {
         font-family: "Manrope";
-        padding: 12px 0;
+        padding: 8px 0;
         width: 100%;
         text-indent: 16px;
-        font-size: 16px;
+        font-size: 14px;
         background: $white;
         border: 1px solid $gray-2;
         border-radius: 4px;
@@ -22,7 +23,7 @@
 
         &::placeholder {
             color: $gray-3;
-            font-size: 16px;
+            font-size: 14px;
         }
     }
 
@@ -33,5 +34,11 @@
             padding-right: 16px;
         }
 
+    }
+
+    &-message {
+        font-size: 11px;
+        min-height: 12px;
+        color: $error-color;
     }
 }
