--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -1,15 +1,16 @@
 .Navbar {
     background: $white;
-    border-right: 1px solid $gray-2;
     height: 100%;
-    position: relative;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    padding: 0 24px;
 
     &-img {
-        width: 260px;
-        margin-top: 48px;
+        width: 200px;
+
+        img {
+            width: 100%;
+        }
     }
 
     &-menu {
@@ -17,13 +18,12 @@
 
         &__item {
             font-weight: 500;
-            font-size: 18px;
-            line-height: 25px;
+            font-size: 16px;
             color: $gray-4;
             border-bottom: 1px solid $gray-2;
             display: flex;
             align-items: center;
-            padding: 24px;
+            padding: 24px 0;
             cursor: pointer;
 
             &.active {
@@ -37,7 +37,6 @@
     &-footer {
         position: absolute;
         bottom: 40px;
-        width: 276px;
-        margin: 0 24px;
+        min-width: 230px;
     }
 }
