--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -1,7 +1,7 @@
 .Home {
     &-title {
-        font-size: 48px;
-        line-height: 66px;
+        font-size: 32px;
+        
         color: $gray-4;
         font-weight: 400;
         margin: 0;
@@ -13,8 +13,7 @@
 
     &-subtitle {
         font-weight: 700;
-        font-size: 32px;
-        line-height: 44px;
+        font-size: 24px;
         color: $gray-2;
     }
 
@@ -38,12 +37,13 @@
             flex-direction: column;
             align-items: flex-start;
             padding: 64px 40px;
-            gap: 8px;
+            gap: 4px;
             font-family: 'Manrope';
             font-style: normal;
-            font-size: 36px;
+            font-size: 28px;
             color: $gray-4;
             cursor: pointer;
+            max-width: 400px;
 
             .bold {
                 font-weight: 700;
