--- a/src/pages/Login/login.scss
+++ b/src/pages/Login/login.scss
@@ -5,7 +5,7 @@
         min-height: 100vh;
         padding: 60px 64px 0;
         display: grid;
-        grid-gap: 16px;
+        grid-gap: 32px;
         grid-template-columns: 50% 50%; 
         
 
@@ -19,16 +19,17 @@
         font-weight: 700;
         font-size: 32px;       
         color: $gray-4;
+        margin: 0;
     }
 
     &-logo {
-        height: 88px;
+        height: 64px;
         width: auto;
     }
 
     &-main {
         display: flex;
-        grid-gap: 32px;
+        grid-gap: 24px;
         flex-direction: column;
         align-items: baseline;
         justify-content: normal;
@@ -46,7 +47,10 @@
         @include max-sm {
             display: none;
         }
+
         width: 100%;
+        max-width: 460px;
+        margin: 80px auto 0;
 
         img {
             width: 100%;
@@ -62,7 +66,7 @@
 
     &-link {
         text-decoration-line: underline;
-        font-size: 16px;
+        font-size: 14px;
         line-height: 22px;
         color: $primary-color;
         float: right;
@@ -71,19 +75,19 @@
 
     &-footer {
         width: 100%;
-        grid-gap: 40px;
+        grid-gap: 32px;
         display: flex;
         flex-direction: column;
     }
 
     &-text-line {
         display: grid;
-        grid-template-columns: auto 134px auto;
+        grid-template-columns: auto 104px auto;
         color: $gray-3;
         grid-gap: 16px;
         align-items: center;
         text-align: center;
-        font-size: 16px;
+        font-size: 12px;
 
         @include max-sm {
             grid-gap: 4px;
