--- a/src/pages/RegisterStudant/register-studant.scss
+++ b/src/pages/RegisterStudant/register-studant.scss
@@ -18,30 +18,30 @@
 
         &__icon {
             color: $primary-color;
-            font-size: 52px;
+            font-size: 32px;
             cursor: pointer;
         }
 
         &__text {
             font-weight: 700;
-            font-size: 32px;       
+            font-size: 24px;       
             color: $gray-4;
+            margin: 0;
 
         }
     }
 
     &-logo {
-        height: 88px;
+        height: 64px;
         width: auto;
     }
     &-stepper {
         width: 100%;
-        margin-bottom: 24px;
     }
 
     &-main {
         display: flex;
-        grid-gap: 32px;
+        grid-gap: 24px;
         flex-direction: column;
         align-items: baseline;
         justify-content: normal;
@@ -50,7 +50,7 @@
         
         @include max-lg {
             max-width: 100%;
-            grid-gap: 24px;
+            grid-gap: 16px;
         }
     }
 
@@ -73,7 +73,7 @@
         width: 100%;
         display: grid;
         grid-column-gap: 72px;
-        grid-row-gap: 32px;
+        grid-row-gap: 24px;
 
         @include max-lg {
             grid-template-columns: auto;
