--- a/src/pages/Schedules/schedules.scss
+++ b/src/pages/Schedules/schedules.scss
@@ -1,10 +1,10 @@
 .Schedules {
     display: grid;
-    grid-gap: 24px;
+    grid-gap: 16x;
 
     &-title {
-        font-size: 48px;
-        line-height: 66px;
+        font-size: 32px;
+        
         color: $gray-4;
         font-weight: 700;
         margin: 0;
@@ -15,12 +15,10 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        max-width: 1226px;
 
         &__text {
-            font-weight: 700;
-            font-size: 16px;
-            line-height: 22px;
+            font-weight: 400;
+            font-size: 14px;
             color: $gray-4;
         }
 
@@ -30,8 +28,7 @@
         }
 
         &__item {
-            font-size: 16px;
-            line-height: 22px;
+            font-size: 14px;
             color: $gray-4;
             display: flex;
             grid-gap: 4px;
@@ -39,8 +36,8 @@
             justify-items: center;
 
             .square {
-                width: 18px;
-                height: 18px;
+                width: 16px;
+                height: 16px;
                 border-radius: 2px;
 
                 &.gray {
@@ -65,6 +62,7 @@
     &-table {
         table {
             border-collapse: collapse;
+            width: 100%;
         }
         th, td {
             border: 1px solid $gray-1;
