--- a/src/pages/SearchMonitor/search-monitor.scss
+++ b/src/pages/SearchMonitor/search-monitor.scss
@@ -8,8 +8,8 @@
     }
 
     &-title {
-        font-size: 48px;
-        line-height: 66px;
+        font-size: 32px;
+        
         color: $gray-4;
         font-weight: 700;
         margin: 0;
@@ -27,7 +27,13 @@
         }
 
         button {
-            max-width: 360px;
+            max-width: 280px;
+        }
+
+        @include max-lg {
+            flex-direction: column;
+            align-items: normal;
+            gap: 24px;
         }
     }
 
