--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -9,7 +9,7 @@
 @import "../../components/Header/header.scss"; 
 @import "../../components/Navbar/navbar.scss"; 
 @import "../../components/GridTemplate/grid-template"; 
-@import "../../components/Alert/alert"; 
+@import "../../components/GridTemplate/grid-template"; 
 
 //page
 @import "../../pages/Login/login.scss"; 
