--- a/src/components/GridTemplate/grid-template.scss
+++ b/src/components/GridTemplate/grid-template.scss
@@ -8,6 +8,12 @@
     grid-template-rows: 80px auto;
     height: 100vh;
 
+    
+    @include max-md {
+        grid-template-columns: 0 auto;
+        grid-template-rows: 64px auto;
+    }
+
     &-navbar {
         grid-area: navbar;
         height: calc(100% - 80px);
@@ -15,6 +21,11 @@
         position: relative;
         padding: 40px 0;
         border-right: 1px solid #E8E8E8;
+
+        @include max-md {
+            padding: 0;
+            position: initial;
+        }
     }
 
     &-header {
@@ -27,6 +38,11 @@
         padding: 32px 40px;
         height: calc(100% - 120px);
         overflow: auto;
+
+        @include max-md {
+            padding: 16px 16px;
+            height: calc(100% - 64px);
+        }
 
     }
 }
