--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -1,9 +1,55 @@
 .Navbar {
     background: $white;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    padding: 0 24px;
+
+    
+    &.showMenu {
+        background-color: $white;
+    }
+
+    @include max-md {
+        background: transparent;
+        position: absolute;
+        z-index: 1;
+    }
+
+    &-container {
+        display: flex;
+        flex-direction: column;
+        padding: 0 24px;
+        transition: opacity 1s ease-in;
+
+        @include max-md {
+            display: none;
+
+            &.showMenu {
+                display: flex;
+                padding: 0 16px;
+            }
+        }
+
+    }
+
+    &-mobile {
+        display: none;
+        padding: 30px 16px;
+
+        @include max-md {
+            padding: 12px 24px;
+            height: 40px;
+            display: flex;
+            gap: 8px;
+            line-height: 40px;
+            color: $primary-color;
+            font-family: 'Manrope';
+            font-style: normal;
+            font-weight: 800;
+        }
+
+        img {
+            width: 40px;
+        }
+    }
 
     &-img {
         width: 200px;
@@ -11,10 +57,18 @@
         img {
             width: 100%;
         }
+
+        @include max-md {
+            display: none;
+        }
     }
 
     &-menu {
         margin: 40px 0;
+
+        @include max-md {
+            margin: 0;
+        }
 
         &__item {
             font-weight: 500;
