Ajustes no front de cadastro

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -14,6 +14,7 @@
 //page
 @import "../../pages/Login/login.scss"; 
 @import "../../pages/RegisterStudant/register-studant.scss"; 
+@import "../../pages/RegisterMonitor/register-monitor.scss"; 
 @import "../../pages/Home/home.scss"; 
 @import "../../pages/Schedules/schedules.scss"; 
 @import "../../pages/SearchMonitor/search-monitor.scss"; 
