--- a/src/components/Input/input.scss
+++ b/src/components/Input/input.scss
@@ -10,7 +10,8 @@
     }
 
     input,
-    input[type="date"] {
+    input[type="date"],
+    select {
         font-family: "Manrope";
         padding: 8px 0;
         width: 100%;
