--- a/src/pages/RegisterStudant/register-studant.scss
+++ b/src/pages/RegisterStudant/register-studant.scss
@@ -77,7 +77,7 @@
     }
 
     &-form {
-        grid-template-columns: auto auto;
+        grid-template-columns: 1fr 1fr;
         width: 100%;
         display: grid;
         grid-column-gap: 72px;
