--- a/src/components/GridTemplate/grid-template.scss
+++ b/src/components/GridTemplate/grid-template.scss
@@ -4,8 +4,8 @@
       "navbar header"
       "navbar main";
       
-    grid-template-columns: 254px auto;
-    grid-template-rows: 64px auto;
+    grid-template-columns: 280px auto;
+    grid-template-rows: 80px auto;
     height: 100vh;
 
     
@@ -16,7 +16,7 @@
 
     &-navbar {
         grid-area: navbar;
-        height: calc(100% - 64px);
+        height: calc(100% - 80px);
         overflow: auto;
         position: relative;
         padding: 40px 0;
@@ -35,7 +35,7 @@
     }
     &-main {
         grid-area: main;
-        padding: 24px;
+        padding: 32px 40px;
         height: calc(100% - 120px);
         overflow: auto;
 
