--- a/src/pages/SearchMonitor/search-monitor.scss
+++ b/src/pages/SearchMonitor/search-monitor.scss
@@ -10,7 +10,7 @@
     &-header {
         display: flex;
         flex-direction: column;
-        gap: 16px;
+        gap: 0;
 
         @include max-md {
             gap: 8px;
@@ -35,8 +35,7 @@
 
         &__text {
             color: $gray-4;
-            font-size: 18px;
-            line-height: 25px;
+            font-size: 14px;
 
             @include max-md {
                 font-size: 14px;
@@ -67,7 +66,6 @@
         }
 
         .card {
-            width: 256px;
             background: $white;
             box-shadow: 0px 4px 28px rgba(171, 171, 171, 0.25);
             border-radius: 4px;
