Ajuste no calendario

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -13,6 +13,8 @@
 @import "../../components/CardSchedule/card-schedule"; 
 @import "../../components/Monitor/monitor"; 
 @import "../../components/Modal/modal"; 
+@import "../../components/Schedule/schedule"; 
+@import "../../components/RadioButton/radio-button"; 
 
 //page
 @import     "../../pages/Login/login.scss"; 
