--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -20,11 +20,12 @@
     min-width: 600px;
     min-height: 400px;
     background: $white;
-    z-index: 10;
+    z-index: 1000;
     border-radius: 8px;
     padding: 40px;
     box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.04);
-    
+    overflow: auto;
+
 
     @include max-md {
         min-width: 60vw;
