--- a/src/pages/Preferences/preferences.scss
+++ b/src/pages/Preferences/preferences.scss
@@ -40,21 +40,48 @@
         }
     }
 
+    &-info {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+
+        
+        .Preferences-buttons {
+            width: 50%;  
+        }
+    }
+
+    .info-group {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+    }
+
+    .info-label {
+        font-size: 14px;
+        margin: 0;
+        color: $gray-5;
+    }
+
+    .info-text {
+        font-size: 12px;
+        color: $gray-5;
+    }
     
     &-form {
-        grid-template-columns: auto auto;
+        grid-template-columns: 1fr 1fr;
         width: 100%;
         display: grid;
         grid-column-gap: 72px;
         grid-row-gap: 40px;
+        width: 80%;
         max-width: 840px;
 
-        @include max-lg {
-            grid-template-columns: auto;
-        }
-
         @include max-md {
+            grid-template-columns: auto;
             gap: 24px;
+            width: 100%;
+            max-width: 100%;
         }
 
         &__radio {
@@ -73,11 +100,15 @@
         margin-top: 40px;
         width: 100%;    
         display: flex;
-        grid-gap: 64px;
-        width: 384px;
+        grid-gap: 24px;
+        width: 80%;
+        max-width: 840px;
 
         @include max-md {
+            flex-direction: column;
+            grid-gap: 24px;
             width: 100%;
+            max-width: 100%;
         }
     }
 
