--- a/src/pages/Schedules/schedules.scss
+++ b/src/pages/Schedules/schedules.scss
@@ -74,9 +74,9 @@
             width: 100%;
         }
         th, td {
-            border: 1px solid $gray-1;
+            border: 1px solid $white;
             border-collapse: collapse;
-          }
+        }
 
         th {
             height: 84px;
@@ -107,7 +107,7 @@
         span {
             align-items: center;
             justify-content: center;
-            font-size: 14px;
+            font-size: 12px;
             line-height: 22px;            
             text-align: center;
             color: $gray-4;
@@ -125,11 +125,13 @@
     .gray {
         background: $gray-2;
         border: 1px solid #E8E8E8;
+        cursor: pointer;
     }
 
     .light {
         background: $primary-color;
         opacity: 24%;
+        cursor: pointer;
 
     }
 
