--- a/src/pages/HomeEmpty/home-empty.scss
+++ b/src/pages/HomeEmpty/home-empty.scss
@@ -27,18 +27,16 @@
     }
 
     &-options {
-        display: flex;
-        flex-direction: row;
-        align-items: flex-start;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
         padding: 0px;
         gap: 32px;
 
         @include max-md {
-            flex-direction: column;
+            grid-template-columns: 1fr;
         }
 
         &__card {
-            width: 100%;
             border-radius: 8px;
             box-shadow: 0px 4px 28px rgba(171, 171, 171, 0.25);
             background-color: $white;
