--- a/src/pages/SearchMonitor/search-monitor.scss
+++ b/src/pages/SearchMonitor/search-monitor.scss
@@ -112,5 +112,29 @@
 
             }
         }
+        
+    }
+
+    &-list {
+        display: flex;
+        flex-direction: column;
+        gap: 32px;
+        margin-top: 24px;
+    }
+
+    &-item {
+        padding: 24px;
+        background-color: $white;
+        box-shadow: 0px 4px 28px rgba(171, 171, 171, 0.25);
+        border-radius: 4px;
+
+        .Monitor {
+            gap: 24px;
+            width: 100%;
+
+            & .card-img {
+                width: 120px;
+            }
+        }
     }
 }
