AJuste estilos mobile

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -14,7 +14,7 @@
 @import "../../components/Monitor/monitor"; 
 @import "../../components/Modal/modal"; 
 @import "../../components/Schedule/schedule"; 
-@import "../../components/RadioButton/radio-button"; 
+@import "../../components/RadioButton/radio-button.scss"; 
 
 //page
 @import     "../../pages/Login/login.scss"; 
