--- a/src/pages/RegisterMonitor/register-monitor.scss
+++ b/src/pages/RegisterMonitor/register-monitor.scss
@@ -8,7 +8,7 @@
             min-height: 94vh;
 
             @include max-sm {
-                padding: 60px 16px 0;
+                padding: 40px 16px 0;
             }
         }
 
@@ -23,7 +23,7 @@
 
             &__icon {
                 color: $primary-color;
-                font-size: 24px;
+                font-size: 40px;
                 cursor: pointer;
             }
 
@@ -86,6 +86,7 @@
 
             @include max-lg {
                 grid-template-columns: auto;
+                grid-row-gap: 8px;
             }
         }
 
@@ -97,6 +98,7 @@
 
             @include max-md {
                 gap: 16px;
+                flex-direction: column;
             }
         }
 
