--- a/src/components/GridTemplate/grid-template.scss
+++ b/src/components/GridTemplate/grid-template.scss
@@ -36,12 +36,11 @@
     &-main {
         grid-area: main;
         padding: 24px;
-        height: calc(100% - 120px);
+        height: 100%;
         overflow: auto;
 
         @include max-md {
             padding: 16px 16px;
-            height: calc(100% - 64px);
         }
 
     }
