--- a/src/pages/HomeEmpty/home-empty.scss
+++ b/src/pages/HomeEmpty/home-empty.scss
@@ -9,9 +9,6 @@
             font-weight: bold;
         }
 
-        @include max-md {
-            font-size: 24px;
-        }
     }
 
     &-subtitle {
@@ -31,9 +28,11 @@
         grid-template-columns: 1fr 1fr;
         padding: 0px;
         gap: 32px;
+        max-width: 960px;
 
         @include max-md {
             grid-template-columns: 1fr;
+            gap: 16px;
         }
 
         &__card {
@@ -54,8 +53,9 @@
 
             @include max-md {
                 max-width: -webkit-fill-available;
-                padding: 48px 24px;
-                font-size: 22px;
+                padding: 40px 16px;
+                font-size: 20px;
+                flex-direction: row;
             }
 
             .bold {
