--- a/src/pages/Preferences/preferences.scss
+++ b/src/pages/Preferences/preferences.scss
@@ -48,6 +48,10 @@
         
         .Preferences-buttons {
             width: 50%;  
+            
+            @include max-md {
+                width: 100%;  
+            }
         }
     }
 
